[tool.poetry]
name = "cloud-functions-utils"
version = "0.5.0"
description = "Utilities for Google Cloud Functions."
authors = ["Jan-Benedikt Jagusch <jan.jagusch@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
google-cloud-bigquery = "^1.24"
google-cloud-error-reporting = "^1.3"
google-cloud-pubsub = "^1.4"
google-cloud-storage = "^1.28"

[tool.poetry.dev-dependencies]
pylint = "^2.5.0"
black = "^21.9b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
